--- a/sell/src/common/stylus/icon.styl
+++ b/sell/src/common/stylus/icon.styl
@@ -1,10 +1,10 @@
 @font-face 
   font-family: 'sell'
-  src:  url('fonts/sell.eot?61mrov'
-  src:  url('fonts/sell.eot?61mrov#iefix') format('embedded-opentype'),
-    url('fonts/sell.ttf?61mrov') format('truetype'),
-    url('fonts/sell.woff?61mrov') format('woff'),
-    url('fonts/sell.svg?61mrov#sell') format('svg')
+  src:  url('../fonts/sell.eot?61mrov');
+  src:  url('../fonts/sell.eot?61mrov#iefix') format('embedded-opentype'),
+    url('../fonts/sell.ttf?61mrov') format('truetype'),
+    url('../fonts/sell.woff?61mrov') format('woff'),
+    url('../fonts/sell.svg?61mrov#sell') format('svg')
   font-weight: normal;
   font-style: normal;
 
